--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "@types/react-dom": "^19",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "next": "14.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
