--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.523.0",
-    "next": "15.3.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
@@ -31,11 +30,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "next": "^14.2.30",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.4",
-    "typescript": "^5",
-    "next": "14.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "typescript": "^5"
   }
 }
